# strlib

./: CMakeLists.txt  README.txt
example/: CMakeLists.txt  README.txt  main.c  result.txt  sentences.txt  slavik_loh.txt
lib/: CMakeLists.txt  library.c  library.h  testing.c
tests/: CMakeLists.txt  testing.c
wrapper/: CMakeLists.txt  library.c  library.cpp  library.h
